lwc-working-time-tracking/force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <label>Project</label>
    <nameField>
        <displayFormat>PRO-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>