lwc-working-time-tracking/force-app/main/default/objects/Project__c/fields/ProjectOwner__c.field-meta.xml
<CustomField>
    <fullName>ProjectOwner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Owning Projects</relationshipLabel>
    <relationshipName>Owning_Projects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>