lwc-working-time-tracking/force-app/main/default/objects/Project__c/fields/ShortName__c.field-meta.xml
<CustomField>
    <fullName>ShortName__c</fullName>
    <label>Short Name</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>