lwc-working-time-tracking/force-app/main/default/objects/Project__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>